--- a/mini-tutorials/app-with-typescript/src/index.css
+++ b/mini-tutorials/app-with-typescript/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+form  {
+  display: flex;
+  flex-direction: column;
+
+}
+
+form input {
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  padding: 4px 6px;
+  margin : 0 4px;
+}
